# permqit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/channels/: amplitude_damping_channel.py  depolarizing_channel.py
examples/simulations/: __init__.py  defaults.py  run_amplitude_damping.py  run_depolarizing_sym.py  run_superactivation_seesaw.py
examples/states/: __init__.py  isotropic.py  max_ent.py  wang_duan.py
src/permqit/SDP/: __init__.py  seesaw.py  seesaw_utils.py  singlet_fraction.py  solve_SDP.py
src/permqit/SDP/variables/: choi.py  masked.py
src/permqit/algebra/: __init__.py  basis.py  basis_subset.py  endomorphism_basis.py  endomorphism_basis_maps.py  endomorphism_direct_sum_basis.py  linear_map.py  matrix.py  polynomial.py
src/permqit/power_method/: power_iteration.py  seesaw.py
src/permqit/representation/: __init__.py  combinatorics.py  isomorphism.py  isomorphism_gijswijt.py  isomorphism_kappa.py  orbits.py  partial_traces.py  partition.py  symmetrization.py  young_tableau.py
src/permqit/utilities/: __init__.py  backend.py  caching.py  deprecated.py  general_functions.py  local_symmetry.py  numpy_utils.py  quantum_info.py  random.py  sdp_result.py  testing.py  timing.py
