[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "permqit"
version = "0.1.0"
description = "A Toolbox for Permutation Invariant Optimization Problems in Quantum Information Theory"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Bjarne Bergh"},
    {name = "Marco Parentin"},
]
keywords = ["quantum information", "representation theory", "symmetric group", "Young tableaux", "relative entropy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
    "sparse",
    "sympy",
    "picos",
    "cvxpy",
    "numba>=0.63; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "numba>=0.62; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "llvmlite; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "llvmlite~=0.45.1; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "qics >= 1.1.3",
    "array-api-compat>=1.14.0",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "parameterized",
    "pytest-cov",
    "scipy-stubs",
    "ipykernel>=7.2.0",
]

[project.optional-dependencies]
cuda12 = [
    "cupy-cuda12x; sys_platform != 'darwin'",
]
cuda12standalone = [
    "cupy-cuda12x[ctk]; sys_platform != 'darwin'",

]
cuda13 = [
    "cupy-cuda13x; sys_platform != 'darwin'",

]
cuda13standalone = [
    "cupy-cuda13x[ctk]; sys_platform != 'darwin'",
]

[tool.uv]
conflicts = [
    [
        {extra = "cuda12"},
        {extra = "cuda12standalone"},
        {extra = "cuda13"},
        {extra = "cuda13standalone"},
    ]
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["permqit*"]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow, usually takes more than 10s to run (disabled by default, select with '-m \"slow\"')",
    "veryslow: marks tests as very slow, usually takes a minute or more to run (disabled by default, select with '-m \"veryslow\"' or '-m \"slow or veryslow\"')",
]


[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120